src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>BooleanAnswer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BooleanAnswer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParagraphText__c</fullName>
        <label>ParagraphText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PicklistAnswer__c</fullName>
        <label>PicklistAnswer</label>
        <picklist>
            <picklistValues>
                <fullName>Violet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indigo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <recordTypes>
        <fullName>BooleanRecordType</fullName>
        <active>true</active>
        <label>BooleanRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>PicklistRecordType</fullName>
        <active>true</active>
        <label>PicklistRecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextRecordType</fullName>
        <active>true</active>
        <label>TextRecordType</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>